Bug 231577 - [PATCH] advice in sys/i386/i386/pmap.c is wrong
Summary: [PATCH] advice in sys/i386/i386/pmap.c is wrong
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: 11.2-STABLE
Hardware: i386 Any
: --- Affects Some People
Assignee: freebsd-bugs (Nobody)
URL:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2018-09-22 10:06 UTC by Andre Albsmeier
Modified: 2023-10-23 10:18 UTC (History)
4 users (show)

See Also:


Attachments
Patch (439 bytes, patch)
2018-09-22 10:06 UTC, Andre Albsmeier
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andre Albsmeier 2018-09-22 10:06:00 UTC
Created attachment 197343 [details]
Patch

I was hit by:

Approaching the limit on PV entries, consider increasing either the vm.pmap.shpgperproc or the vm.pmap.pv_entry_max tunable.

The latter seems to be wrong - vm.pmap.pv_entry_max can't be changed.
The correct name would be vm.pmap.pv_entries.

The code can also be found in sys/arm/arm/pmap-v6.c and might be wrong
there as well.
Comment 1 commit-hook freebsd_committer freebsd_triage 2018-12-01 16:43:35 UTC
A commit references this bug:

Author: kib
Date: Sat Dec  1 16:43:19 UTC 2018
New revision: 341374
URL: https://svnweb.freebsd.org/changeset/base/341374

Log:
  Correct the tunable name in the message.

  Submitted by:	 Andre Albsmeier <mail@fbsd.e4m.org>
  PR:	231577
  MFC after:	1 week

Changes:
  head/sys/arm/arm/pmap-v6.c
  head/sys/i386/i386/pmap.c
Comment 2 commit-hook freebsd_committer freebsd_triage 2018-12-08 00:45:07 UTC
A commit references this bug:

Author: kib
Date: Sat Dec  8 00:44:44 UTC 2018
New revision: 341715
URL: https://svnweb.freebsd.org/changeset/base/341715

Log:
  MFC r341374:
  Correct the tunable name in the message.

  PR:	231577

Changes:
_U  stable/12/
  stable/12/sys/arm/arm/pmap-v6.c
  stable/12/sys/i386/i386/pmap.c
Comment 3 commit-hook freebsd_committer freebsd_triage 2018-12-08 00:48:13 UTC
A commit references this bug:

Author: kib
Date: Sat Dec  8 00:47:23 UTC 2018
New revision: 341717
URL: https://svnweb.freebsd.org/changeset/base/341717

Log:
  MFC r341374:
  Correct the tunable name in the message.

  PR:	231577

Changes:
_U  stable/11/
  stable/11/sys/arm/arm/pmap-v6.c
  stable/11/sys/i386/i386/pmap.c
Comment 4 Warner Losh freebsd_committer freebsd_triage 2019-01-07 16:42:50 UTC
kib committed and MFC'd this. Close it out. kib can reopen if I'm doing this in error.
Comment 5 commit-hook freebsd_committer freebsd_triage 2023-10-19 17:02:27 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=02320f64209563e35fa371fc5eac94067f688f7f

commit 02320f64209563e35fa371fc5eac94067f688f7f
Author:     Zhenlei Huang <zlei@FreeBSD.org>
AuthorDate: 2023-10-19 17:00:31 +0000
Commit:     Zhenlei Huang <zlei@FreeBSD.org>
CommitDate: 2023-10-19 17:00:31 +0000

    pmap: Prefer consistent naming for loader tunable

    The sysctl knob 'vm.pmap.pv_entry_max' becomes a loader tunable since
    7ff48af7040f (Allow a specific setting for pv entries) but is fetched
    from system environment 'vm.pmap.pv_entries'. That is inconsistent and
    obscure.

    This reverts 36e1b9702e21 (Correct the tunable name in the message).

    PR:             231577
    Reviewed by:    jhibbits, alc, kib
    MFC after:      3 days
    Differential Revision:  https://reviews.freebsd.org/D42274

 sys/arm/arm/pmap-v6.c    | 4 ++--
 sys/i386/i386/pmap.c     | 4 ++--
 sys/powerpc/booke/pmap.c | 2 +-
 3 files changed, 5 insertions(+), 5 deletions(-)
Comment 6 commit-hook freebsd_committer freebsd_triage 2023-10-23 10:13:10 UTC
A commit in branch stable/14 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=e53f8ca323e8e563d4b55883fc3544bea75aab29

commit e53f8ca323e8e563d4b55883fc3544bea75aab29
Author:     Zhenlei Huang <zlei@FreeBSD.org>
AuthorDate: 2023-10-19 17:00:31 +0000
Commit:     Zhenlei Huang <zlei@FreeBSD.org>
CommitDate: 2023-10-23 10:12:21 +0000

    pmap: Prefer consistent naming for loader tunable

    The sysctl knob 'vm.pmap.pv_entry_max' becomes a loader tunable since
    7ff48af7040f (Allow a specific setting for pv entries) but is fetched
    from system environment 'vm.pmap.pv_entries'. That is inconsistent and
    obscure.

    This reverts 36e1b9702e21 (Correct the tunable name in the message).

    PR:             231577
    Reviewed by:    jhibbits, alc, kib
    MFC after:      3 days
    Differential Revision:  https://reviews.freebsd.org/D42274

    (cherry picked from commit 02320f64209563e35fa371fc5eac94067f688f7f)

 sys/arm/arm/pmap-v6.c    | 4 ++--
 sys/i386/i386/pmap.c     | 4 ++--
 sys/powerpc/booke/pmap.c | 2 +-
 3 files changed, 5 insertions(+), 5 deletions(-)
Comment 7 commit-hook freebsd_committer freebsd_triage 2023-10-23 10:16:14 UTC
A commit in branch stable/13 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=16afc2a4d9c581064aa32babc29c748ccd59863c

commit 16afc2a4d9c581064aa32babc29c748ccd59863c
Author:     Zhenlei Huang <zlei@FreeBSD.org>
AuthorDate: 2023-10-19 17:00:31 +0000
Commit:     Zhenlei Huang <zlei@FreeBSD.org>
CommitDate: 2023-10-23 10:15:12 +0000

    pmap: Prefer consistent naming for loader tunable

    The sysctl knob 'vm.pmap.pv_entry_max' becomes a loader tunable since
    7ff48af7040f (Allow a specific setting for pv entries) but is fetched
    from system environment 'vm.pmap.pv_entries'. That is inconsistent and
    obscure.

    This reverts 36e1b9702e21 (Correct the tunable name in the message).

    PR:             231577
    Reviewed by:    jhibbits, alc, kib
    MFC after:      3 days
    Differential Revision:  https://reviews.freebsd.org/D42274

    (cherry picked from commit 02320f64209563e35fa371fc5eac94067f688f7f)
    (cherry picked from commit e53f8ca323e8e563d4b55883fc3544bea75aab29)

 sys/arm/arm/pmap-v6.c    | 4 ++--
 sys/i386/i386/pmap.c     | 4 ++--
 sys/powerpc/booke/pmap.c | 2 +-
 3 files changed, 5 insertions(+), 5 deletions(-)
Comment 8 commit-hook freebsd_committer freebsd_triage 2023-10-23 10:18:17 UTC
A commit in branch stable/12 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=0ceaf5d4628210226d0bafc2650b494a07ca9aaf

commit 0ceaf5d4628210226d0bafc2650b494a07ca9aaf
Author:     Zhenlei Huang <zlei@FreeBSD.org>
AuthorDate: 2023-10-19 17:00:31 +0000
Commit:     Zhenlei Huang <zlei@FreeBSD.org>
CommitDate: 2023-10-23 10:17:44 +0000

    pmap: Prefer consistent naming for loader tunable

    The sysctl knob 'vm.pmap.pv_entry_max' becomes a loader tunable since
    7ff48af7040f (Allow a specific setting for pv entries) but is fetched
    from system environment 'vm.pmap.pv_entries'. That is inconsistent and
    obscure.

    This reverts 36e1b9702e21 (Correct the tunable name in the message).

    PR:             231577
    Reviewed by:    jhibbits, alc, kib
    MFC after:      3 days
    Differential Revision:  https://reviews.freebsd.org/D42274

    (cherry picked from commit 02320f64209563e35fa371fc5eac94067f688f7f)
    (cherry picked from commit e53f8ca323e8e563d4b55883fc3544bea75aab29)
    (cherry picked from commit 16afc2a4d9c581064aa32babc29c748ccd59863c)

 sys/arm/arm/pmap-v6.c    | 4 ++--
 sys/i386/i386/pmap.c     | 4 ++--
 sys/powerpc/booke/pmap.c | 2 +-
 3 files changed, 5 insertions(+), 5 deletions(-)